--- a/Client/WPFWCFClient/LocationWCF/Windows/LoginWindow.xaml
+++ b/Client/WPFWCFClient/LocationWCF/Windows/LoginWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationWCFClient.Windows"
         mc:Ignorable="d"
-        Title="用户登录" Height="150" Width="300">
+        Title="用户登录" Height="180" Width="300">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
@@ -18,14 +19,22 @@
             <ColumnDefinition Width="81*"/>
             <ColumnDefinition Width="211*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0">IP</Label>
-        <TextBox Grid.Row="0" Grid.Column="1" Name="TbIp">localhost</TextBox>
-        <Label Grid.Row="1" Grid.Column="0">Port</Label>
-        <TextBox Grid.Row="1" Grid.Column="1" Name="TbPort">8733</TextBox>
-        <Label Grid.Row="2" Grid.Column="0">User</Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Name="TbUser">admin</TextBox>
-        <Label Grid.Row="3" Grid.Column="0">Password</Label>
-        <TextBox Grid.Row="3" Grid.Column="1" Name="TbPass">admin</TextBox>
-        <Button Grid.Row="4" Grid.ColumnSpan="2" Name="BtnLogin" Click="BtnLogin_OnClick">登录</Button>
+        <Label Grid.Row="0" Grid.Column="0">HostType</Label>
+        <ComboBox Grid.Row="0" Grid.Column="1" Name="CbHostType" SelectionChanged="CbHostType_SelectionChanged">
+            <ComboBoxItem IsSelected="True">Application</ComboBoxItem>
+            <ComboBoxItem>WebSite</ComboBoxItem>
+        </ComboBox>
+        <Label Grid.Row="1" Grid.Column="0">IP</Label>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="TbIp">localhost</TextBox>
+        <Label Grid.Row="2" Grid.Column="0">Port</Label>
+        <ComboBox Grid.Row="2" Grid.Column="1" Name="CbPort">
+            <ComboBoxItem IsSelected="True">8733</ComboBoxItem>
+            <ComboBoxItem >53506</ComboBoxItem>
+        </ComboBox>
+        <Label Grid.Row="3" Grid.Column="0">User</Label>
+        <TextBox Grid.Row="3" Grid.Column="1" Name="TbUser">admin</TextBox>
+        <Label Grid.Row="4" Grid.Column="0">Password</Label>
+        <TextBox Grid.Row="4" Grid.Column="1" Name="TbPass">admin</TextBox>
+        <Button Grid.Row="5" Grid.ColumnSpan="2" Name="BtnLogin" Click="BtnLogin_OnClick">登录</Button>
     </Grid>
 </Window>
