添加ChatHub，上传SignalR代码
ChatHub不行，EchoHub可以

--- a/Client/WPFWCFClient/LocationWCF/Windows/ClientWindow.xaml
+++ b/Client/WPFWCFClient/LocationWCF/Windows/ClientWindow.xaml
@@ -13,7 +13,8 @@
                 <MenuItem Header="Save"></MenuItem>
             </MenuItem>
             <MenuItem Header="Window">
-                <MenuItem Header="EchuHub" Name="EchuHub" Click="MenuSignalR_Click"></MenuItem>
+                <MenuItem Header="EchuHub" Name="MenuEchuHub" Click="MenuSignalR_Click"></MenuItem>
+                <MenuItem Header="ChatHub" Name="MenuChatHubMenu" Click="MenuChatHubMenu_Click"></MenuItem>
             </MenuItem>
         </Menu>
         <WPFClientControlLib:ResourceTreeView DockPanel.Dock="Left" Width="300" x:Name="ResourceTreeView1"/>
