--- a/Server/WebSite/LocationWeb/Views/LocationCardPosition/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCardPosition/Details.cshtml
@@ -81,11 +81,11 @@
                     @Html.DisplayFor(model => model.Flag)
                 </dd>
                 <dt>
-                    @Html.DisplayNameFor(model => model.TopoNodes)
+                    @Html.DisplayNameFor(model => model.AreaId)
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.TopoNodes)
+                    @Html.DisplayFor(model => model.AreaId)
                 </dd>
             </dl>
         </div>
