--- a/Server/WebSite/LocationWeb/Views/LocationCardPosition/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCardPosition/Index.cshtml
@@ -56,7 +56,7 @@
             @Html.DisplayNameFor(model => model.Flag)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TopoNodes)
+            @Html.DisplayNameFor(model => model.AreaId)
         </th>
         <th></th>
     </tr>
@@ -88,7 +88,7 @@
             @Html.DisplayFor(modelItem => item.Flag)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TopoNodes)
+            @Html.DisplayFor(modelItem => item.AreaId)
         </td>
         @*<td>          
 
