--- a/Server/WebSite/LocationWeb/Views/LocationCardPosition/Create.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCardPosition/Create.cshtml
@@ -83,10 +83,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.TopoNodes, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.AreaId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.TopoNodes, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.TopoNodes, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.AreaId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AreaId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
