--- a/Server/WebSite/LocationWeb/Views/Positions/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Positions/Index.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayNameFor(model => model.Flag)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TopoNodeId)
+            @Html.DisplayNameFor(model => model.AreaId)
         </th>
         <th></th>
     </tr>
@@ -76,7 +76,7 @@
             @Html.DisplayFor(modelItem => item.Flag)
         </td>
         <th>
-            @Html.DisplayFor(modelItem => item.TopoNodeId)
+            @Html.DisplayFor(modelItem => item.AreaId)
         </th>
         @*<td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
