--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -115,6 +115,9 @@
                 <WPFClientControlLib:DoorAccessListBox x:Name="DoorAccessListBox1"   Margin="0,20,0,0">
                 </WPFClientControlLib:DoorAccessListBox>
             </TabItem>
+            <TabItem Header="基站设置">
+                
+            </TabItem>
         </TabControl>
 
 
