--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationWCFServer.MainWindow"
+﻿<Window xmlns:LocationServer="clr-namespace:LocationServer"  xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationWCFServer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -48,38 +48,7 @@
                 </Grid>
             </TabItem>
             <TabItem Header="定位" Height="21" VerticalAlignment="Top" Visibility="Visible">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Text="模拟标签倍数"></TextBox>
-                            <TextBox Name="TbMockTagPowerCount0" Text="0"></TextBox>
-
-                            <Button Name="BtnStopConnectEngine" Content="停止" Click="BtnStopConnectEngine_OnClick"></Button>
-                            <Button Name="BtnNewDb" Content="新建Db" Click="BtnNewDb_OnClick"></Button>
-
-                            <TextBox Name="TbTimer" Text="0:0:0:0"></TextBox>
-                            <TextBox x:Name="textBox_U3DTEST" Height="23" TextWrapping="Wrap" Width="256"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Text="模拟位置数量"></TextBox>
-                            <TextBox Name="TbMockCount1" Text="500"></TextBox>
-                            <Button Name="BtnTestInsertData" Click="BtnTestInsertData_OnClick" Content="测试插入大量数据1"></Button>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Text="标签倍数"></TextBox>
-                            <TextBox Name="TbMockTagPowerCount" Text="100"></TextBox>
-                            <TextBox Text="位置倍数"></TextBox>
-                            <TextBox Name="TbMockPosPowerCount" Text="100"></TextBox>
-                            <Button Name="BtnTestInsertData2" Click="BtnTestInsertData2_OnClick" Content="一次测试插入大量数据"></Button>
-                            <Button Name="BtnTestInsertData3" Content="持续测试插入大量数据" Click="BtnTestInsertData3_OnClick"></Button>
-                        </StackPanel>
-                        <Button Name="BtnGeneratePosition" Content="开始产生位置信息" Click="BtnGeneratePosition_OnClick"></Button>
-                    </StackPanel>
-                </Grid>
+                <LocationServer:LocationTestBox x:Name="LocationTestBox1"/>
             </TabItem>
             <TabItem Header="定位告警">
                 <StackPanel>
@@ -115,8 +84,8 @@
                 <WPFClientControlLib:DoorAccessListBox x:Name="DoorAccessListBox1"   Margin="0,20,0,0">
                 </WPFClientControlLib:DoorAccessListBox>
             </TabItem>
-            <TabItem Header="基站设置">
-                
+            <TabItem Header="定位引擎设置">
+                <LocationServer:LocationEngineSettingBox x:Name="LocationEngineSettingBox1"/>
             </TabItem>
         </TabControl>
 
