基站配置工具

--- a/Client/WPFWCFClient/WPFClientControlLib/TopoTreeView.xaml
+++ b/Client/WPFWCFClient/WPFClientControlLib/TopoTreeView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TreeView Name="TreeView1">
+        <TreeView Name="TreeView1" SelectedItemChanged="TreeView1_OnSelectedItemChanged">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded}"></Setter>
