工具_设备显示

--- a/Client/WPFWCFClient/WPFClientControlLib/TopoTreeView.xaml
+++ b/Client/WPFWCFClient/WPFClientControlLib/TopoTreeView.xaml
@@ -8,11 +8,11 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <TreeView Name="TreeView1" SelectedItemChanged="TreeView1_OnSelectedItemChanged">
-            <TreeView.ItemContainerStyle>
+            <!--<TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded}"></Setter>
                 </Style>
-            </TreeView.ItemContainerStyle>
+            </TreeView.ItemContainerStyle>-->
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
                     <StackPanel Orientation="Horizontal">
